workshop03/cs-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cs-ing
  namespace: csns
  labels:
    app: cs
    name: cs-ing
  # annotations:
  #   nginx.ingress.kubernetes.io/limit-connections: '5'
  #   nginx.ingress.kubernetes.io/limit-rps: '5'
spec:
  ingressClassName: nginx
  rules:
    - host: cs-104.248.98.60.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: csapp-svc
                port:
                  number: 8443
